- Fixed the custom vote layout issue - Added Max Length of 30 to custom vote title - Added all of the different vote headings - Orbs in vote column

--- a/StoryPointEstimatorBlazorApp/wwwroot/css/site.css
+++ b/StoryPointEstimatorBlazorApp/wwwroot/css/site.css
@@ -289,14 +289,18 @@
 }
 
 .table-vote-text {
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Ubuntu';
     font-weight: bold;
 }
 
-.loding-display {
-    background-color: lightgrey;
-    color: black;
-    padding-top: 50%;
-
+.vote-background {
+    background-color: #4B27FE;
+    color: white;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    padding-top: 5px;
+    display: flex;
+    justify-content: center;
 }
